src/style.scss
/* ... */
.schedule--col {
  z-index: 0;
  font-weight: 100;
  margin: 10px 12%;
  color: white;
  h4 {
    color: #F1F1F1;
  }
  h3 {
    color: white;
  }
  @media(min-width: $br-medium) {
    width: 320px;
    margin: 0 3%;
  }
  div {
    margin: 17px 0px;
  }
}

.schedule--block {
  font-weight: 500;
  display: inline-block;
  margin-bottom: 5px;
  border: 1px solid #eaeaea;
  color: #5a5a5a;
  border-radius: 6px;
  padding: 7px 9px;
  background-color: white;
  box-shadow: 0 0 15px rgba(0, 0, 0, .02);
}

#schedule,
#faq,
#contact,
#team {
  margin: 80px 0 30px;
}

#stories,
#sponsors,
#faq {
  @media (max-width: $br-medium) {
    margin-top: 40px;
  }
}

.circle {
  width: 500px;
  height: 500px;
  position: absolute;
  border-radius: 50%;
  z-index: -1;
  @media (max-width: $br-medium) {
    display: none;
  }
}

.blue {
  top: 120px;
  left: -200px;
  border: 180px solid rgba(163, 187, 255, 0.63);
}

.purple {
  bottom: 50px;
  right: -275px;
  border: 180px solid rgba(183, 163, 255, 0.63);
}

.faq--col {
  margin: 0 17px;
  width: 40%;
  display: flex;
  flex-direction: column;
  @media (max-width: $br-medium) {
    margin: initial;
    width: 100%;
  }
}

.faq--container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0 0 0 -25%;
  width: 150%;
  @media (max-width: $br-medium) {
    margin: 0;
    width: 100%;
  }
}

.faq--email {
  margin-bottom: 130px;
}

.team--container {
  margin: 0 auto;
  max-width: 1100px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  /* &__collapsed {
    @extend .team--container;
    max-width: 900px;
  } */
}

.team--section {
  max-width: 1100px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.member {
  width: 150px;
  margin: 15px;
  padding: 23px 19px 18px;
  box-shadow: 0 4px 20px rgba(46, 61, 73, .05);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  border: 1px solid rgba(185, 185, 185, 0.2);
  border-bottom: 3px solid rgb(179, 166, 238);
  @media (max-width: $br-small) {
    width: 100%;
    height: 40px;
    margin: 5px 20px;
    flex-direction: row;
    justify-content: center;
    div {
      text-align: left;
      padding-left: 20px;
      &:last-child  {
        margin-left: auto;
      }
    }
  }
  img {
    width: 100px;
    height: 100px;
    border-radius: 500px;
    @media (max-width: $br-small) {
      width: 60px;
      height: 60px;
    }
  }
  h3 {
    font-size: 1em;
    margin: 11px 0 1px;
    @media (max-width: $br-medium) {
      margin: 0;
    }
  }
  p {
    margin: 0;
    font-size: .8em;
  }
  .social {
    @media (max-width: $br-small) {
      flex-direction: column;
      a:last-child img {
        width: 20px;
      }
      img {
        width: 18px;
      }
    }
    img {
      border-radius: unset;
      width: initial;
      &:hover {
        opacity: .4;
      }
    }
  }
}

.justify-right {
  text-align: right;
  .card--col {
    padding: 0 0 0 42px;
  }
}

.separator {
  border: 1px solid #eaeaea;
  width: 40px;
  margin: 7px 0 11px;
}

.twocol {
  display: flex;
  align-items: center;
  @media (max-width: $br-medium) {
    flex-direction: column;
  }
  &--expanded {
    @extend .twocol;
    margin: 90px 0 90px -9%;
    width: 118%;
    @media (max-width: $br-medium) {
      margin: 0;
      width: 100%;
    }
  }
  div:first-child {
    margin-right: 120px;
    @media (max-width: $br-medium) {
      margin: 50px 0;
    }
  }
  &--body {
    width: 50%;
    font-size: 0.9em;
    p {
      margin-bottom: 0
    }
    @media (max-width: $br-medium) {
      width: initial;
    }
  }
  &--image {
    @extend .twocol--body;
    height: 250px;
    border-radius: 7px;
    overflow: hidden;
    @media (max-width: $br-medium) {
      border-radius: 0px;
      height: initial;
      img {
        width: 100vw;
      }
    }
    &__highlight {
      @extend .twocol--image;
      transform: scale(1.1);
      box-shadow: 0 5px 20px rgba(58, 71, 80, .2);
    }
  }
}

.btn {
  display: block;
  font-weight: 100;
  width: 60px;
  margin: 0 auto;
  padding: 12px 30px;
  border-radius: 30px;
  border: 1px #efefef solid;
  cursor: pointer;
  @include prefix(user-select,
  none);
  box-shadow: 0 4px 10px rgba(0, 0, 0, .02);
  transition: transform 0.5s ease, box-shadow 1s ease;
  &:hover {
    transform: translateY(-2px);
    box-shadow: 0 6px 12px rgba(0, 0, 0, .04);
  }
  &:active {
    transform: translateY(1px);
    box-shadow: 0 0 12px rgba(0, 0, 0, .04);
  }
  &--cta {
    @extend .btn;
    background: linear-gradient(90deg, hsla(234, 100%, 80%, 0.685), rgba(157, 135, 255, 0.658));
    //box-shadow: 0 3px 10px rgba(128, 120, 241, 0.327);
    color: white;
    border: 1px solid rgb(218, 216, 252);
    &:hover {
      transform: translateY(-1px);
      color: white;
      //box-shadow: 0 5px 15px rgba(128, 120, 241, 0.327);
    }
  }
  &--disabled {
    @extend .btn;
    cursor: default;
    box-shadow: none;
    display: inline;
    text-transform: uppercase;
    color: white;
    border: 2px darken(white, 4%) solid;
  }
}

#circle {
  position: absolute;
  top: $body-border;
  left: 0;
  bottom: 0;
  right: 0;
  margin: auto;
  width: 850px;
  height: 850px;
  background-color: white;
  opacity: 1;
  border-radius: 325px;
  -webkit-transform: translate3d(0, 0, 0);
  filter: blur(100px);
  z-index: -2;
  @media(max-width: $br-medium) {
    border-radius: 0;
    width: 80%;
    height: 80%;
    filter: blur(90px);
  }
  @media(max-width: $br-small) {
    width: 100%;
  }
}

.arrow {
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
  bottom: 3vh;
}


/* unused particle system
#radar > .sketch {
  position: absolute;
  z-index: -3;
  top: $body-border;
  left: 0;
  opacity: 1;
}
*/

#hero-bg {
  width: 100vw;
  height: 100vh;
  position: absolute;
  z-index: -4;
  top: 0;
  left: 0;
  background-image: url('images/hero5.jpg')
}
/* ... */

